--- a/vistas/Galeria.html
+++ b/vistas/Galeria.html
@@ -19,9 +19,11 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <img src="../assets/Pasteleria1.jpg" alt="1px">
-        <img src="../assets/Pasteleria2.jpg" alt="50px">
+    <main class="ImgPasteleria">
+        <div class="ImgP">
+            <img src="../assets/Pasteleria1.jpg" alt="">
+            <img src="../assets/Pasteleria2.jpg" alt="">
+        </div>
     </main>
     <footer>
         <div class="Informacion">
