--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bakery Cordoba</title>
     <link rel="stylesheet" href="../estilos/styles.css">
 </head>
 <body class="BodyIndex">
@@ -69,4 +69,3 @@
     </footer>
 </body>
 </html>
-git add . git commit -m ..... git push origin.... git checkout master git merge ......... git push origin
