--- a/index.html
+++ b/index.html
@@ -22,6 +22,44 @@
     </header>
     <main class="Frase">
         <p class="Frase__Autentica">LA PASTELERIA MAS AUTENTICA DE CÓRDOBA</p>
+        <section class="Horarios">
+            <h2>Horarios</h2>
+            <table border="1" cellsapacing="10" cellpadding="8" >
+                <tr>
+                    <th>Turnos</th>
+                    <th>Lunes</th>
+                    <th>Martes</th>
+                    <th>Miercoles</th>
+                    <th>Jueves</th>
+                    <th>Viernes</th>
+                </tr>
+                <tr>
+                    <td>Mañana</td>
+                    <td>De 8am a 13pm</td>
+                    <td>De 8am a 13pm</td>
+                    <td>De 8am a 13pm</td>
+                    <td>De 8am a 15pm</td>
+                    <td>De 8am a 15pm</td>
+                </tr>
+                <tr>
+                    <td>Tarde</td>
+                    <td>De 16pm a 20pm</td>
+                    <td>De 16pm a 20pm</td>
+                    <td>De 16pm a 20pm</td>
+                    <td>De 16pm a 21pm</td>
+                    <td>De 16pm a 21pm</td>
+                </tr>
+            </table>
+        </section>
+        <section class="ComidaDia">
+            <h2>
+                "Menu del dia"
+            </h2>
+            <p>
+                <h3>Cafe a eleccion con una porcion de torta</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem obcaecati totam dolore ut porro provident eaque iste non perferendis molestiae!</p>
+            </p>
+        </section>
     </main>
     <footer>
         <div class="Informacion">
