--- a/index.html
+++ b/index.html
@@ -1,55 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bakery Cordoba</title>
+    <title>Backery Cordoba</title>
     <link rel="stylesheet" href="../estilos/styles.css">
 </head>
 <body class="BodyIndex">
     <header>
-    <h1 class="Titulo">Bakery Cordoba</h1>
-        <nav class="Menu">
-            <ul>
-                <li class="Menu__sobremi"><a href="./vistas/sobre-mi.html">"Sobre mi"</a></li>
-                <li class="Menu__Contacto"><a href="./vistas/Contacto.html">"Contacto"</a></li>
-                <li class="Menu__Galeria"><a href="./vistas/Galeria.html">"Galeria"</a></li>
-                <li class="Menu__Servicios"><a href="./vistas/servicios.html">"Servicios"</a></li>
-                <li class="Menu__UbicacionLocal"><a href="./vistas/Ubicacion-de-nuestro-local.html">"Ubicacion de nuestro local" </a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><h1 class="Titulo">Bakery<br>Cordoba</h1></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end colorNav" id="navbarSupportedContent">
+                <ul class="navbar-nav  mb-2 mb-lg-0 aling-items-end">
+                  <li class="nav-item">
+                    <a class="nav-link" href="./index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./vistas/sobre-mi.html">Sobre mi</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./vistas/Contacto.html">Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./vistas/Galeria.html">Galeria</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./vistas/servicios.html">Servicios</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./vistas/Ubicacion-de-nuestro-local.html">Ubicacion de nuestro local</a>
+                  </li>
+                </div>
+                </div>
+          </nav>
     </header>
     <main class="Frase">
-        <p class="Frase__Autentica">LA PASTELERIA MAS AUTENTICA DE CÓRDOBA</p>
+        <div class="Frase__Autentica">
+            <h2>LA PASTELERIA MAS AUTENTICA DE CÓRDOBA</h2>
+            <p>En Bakery Cordoba nos esforzamos a diario <br> para que a tu mesa lleguen los productos más ricos y saludables,<br> elaborados con la mejor materia prima del mercado.</p>
+        </div>
         <section class="Horarios">
             <h2>Horarios</h2>
-            <table border="1" cellsapacing="10" cellpadding="8" >
-                <tr>
-                    <th>Turnos</th>
-                    <th>Lunes</th>
-                    <th>Martes</th>
-                    <th>Miercoles</th>
-                    <th>Jueves</th>
-                    <th>Viernes</th>
-                </tr>
-                <tr>
-                    <td>Mañana</td>
-                    <td>De 8am a 13pm</td>
-                    <td>De 8am a 13pm</td>
-                    <td>De 8am a 13pm</td>
-                    <td>De 8am a 15pm</td>
-                    <td>De 8am a 15pm</td>
-                </tr>
-                <tr>
-                    <td>Tarde</td>
-                    <td>De 16pm a 20pm</td>
-                    <td>De 16pm a 20pm</td>
-                    <td>De 16pm a 20pm</td>
-                    <td>De 16pm a 21pm</td>
-                    <td>De 16pm a 21pm</td>
-                </tr>
-            </table>
+            <h3>Lunes a viernes</h3>
+           <p>Mañana: 8am a 12pm<br>Tarde: 16pm a 20pm</p>
         </section>
         <section class="ComidaDia">
             <h2>
@@ -63,9 +62,11 @@
     </main>
     <footer>
         <div class="Informacion">
-            <a href="https://www.instagram.com/"><img class="Insta" src="../assets/instagram.png" alt=""></a>
-           <a href="https://es-la.facebook.com/"><img class="Facebook" src="../assets/facebook.png" alt=""></a>
+            <a href="https://www.instagram.com/" target="_blank"><img class="Insta" src="../assets/instagram.png" alt=""></a>
+           <a href="https://es-la.facebook.com/" target="_blank"><img class="Facebook" src="../assets/facebook.png" alt=""></a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
 </body>
 </html>
