--- a/vistas/Ubicacion-de-nuestro-local.html
+++ b/vistas/Ubicacion-de-nuestro-local.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +10,35 @@
 </head>
 <body class="BodyIndex">
     <header>
-        <h1 class="Titulo">UBICACION DEL LOCAL</h1>
-        <nav class="Menu">
-            <ul>
-                <li class="Menu__Volver"><a href="../index.html">"Volver al inicio"</a></li>
-                <li class="Menu__sobremi"><a href="../vistas/sobre-mi.html">"Sobre mi"</a></li>
-                <li class="Menu__Contacto"><a href="../vistas/Contacto.html">"Contacto"</a></li>
-                <li class="Menu__Galeria"><a href="../vistas/Galeria.html">"Galeria"</a></li>
-                <li class="Menu__Servicios"><a href="../vistas/servicios.html">"Servicios" </a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><h1 class="Titulo">Bakery<br>Cordoba</h1></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end colorNav" id="navbarSupportedContent">
+                <ul class="navbar-nav  mb-2 mb-lg-0 aling-items-end">
+                  <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../vistas/sobre-mi.html">Sobre mi</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../vistas/Contacto.html">Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../vistas/Galeria.html">Galeria</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../vistas/servicios.html">Servicios</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../vistas/Ubicacion-de-nuestro-local.html">Ubicacion de nuestro local</a>
+                  </li>
+                </div>
+                </div>
+          </nav>
     </header>
     <main>
         <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=Av.%20Maip%C3%BA%20147-99,%20X5000IBC%20C%C3%B3rdoba+(Bakery%20C%C3%B3rdoba)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">GPS car tracker</a></iframe></div>
@@ -31,5 +51,6 @@
             </div>
         </footer>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
