--- a/vistas/Contacto.html
+++ b/vistas/Contacto.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bakery Cordoba</title>
     <link rel="stylesheet" href="../estilos/styles.css">
 </head>
 <body class="BodyIndex">
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><h1 class="Titulo">Bakery<br>Cordoba</h1></a>
+              <a class="navbar-brand" href="../index.html"><h1 class="Titulo">Bakery<br>Cordoba</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -40,9 +40,12 @@
                 </div>
           </nav>
     </header>
-    <main class="Formulario">
+    <main class="Text">
+      <h1 class="Text__1">CONTACTATE</h1>
+    </main>  
+      <main class="Formulario">
         <form action="" method="get" enctype="text/plain">
-            <label for="Username">Nombre</label>
+            <label for="U<sername">Nombre</label>
             <input type="text" name="Username" id="Username" required>
         <div>
             <label for="Usersurname">Apellido</label>
