--- a/vistas/Ubicacion-de-nuestro-local.html
+++ b/vistas/Ubicacion-de-nuestro-local.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bakery Cordoba</title>
     <link rel="stylesheet" href="../estilos/styles.css">
 </head>
 <body class="BodyIndex">
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><h1 class="Titulo">Bakery<br>Cordoba</h1></a>
+              <a class="navbar-brand" href="../index.html"><h1 class="Titulo">Bakery<br>Cordoba</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -41,7 +41,7 @@
           </nav>
     </header>
     <main>
-        <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=Av.%20Maip%C3%BA%20147-99,%20X5000IBC%20C%C3%B3rdoba+(Bakery%20C%C3%B3rdoba)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">GPS car tracker</a></iframe></div>
+        <div style="width: 100%"><iframe width="100%" height="658" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=Av.%20Maip%C3%BA%20147-99,%20X5000IBC%20C%C3%B3rdoba+(Bakery%20C%C3%B3rdoba)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">GPS car tracker</a></iframe></div>
     </main>
     <footer>
         <footer>
