--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
         <section class="ComidaDia">
             <h2>
-                "Menu del dia"
+                "Menu del dia" a
             </h2>
             <p>
                 <h3>Cafe a eleccion con una porcion de torta</h3>
