--- a/vistas/Contacto.html
+++ b/vistas/Contacto.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakery Cordoba</title>
-    <link rel="stylesheet" href="../estilos/styles.css">
+    <link rel="stylesheet" href="../estilos/main.css">
 </head>
 <body class="BodyIndex">
     <header>
