--- a/vistas/Contacto.html
+++ b/vistas/Contacto.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bakery Cordoba</title>
+    <meta name="Description" content="Contactate con nosotros">
+    <meta name="Keywords" content="panaderia,bakery,coffie,meal,pan,merienda,breakfast,Contacto">
+    <title>Bakery Cordoba| Contact</title>
     <link rel="stylesheet" href="../estilos/main.css">
 </head>
 <body class="BodyIndex">
