--- a/vistas/sobre-mi.html
+++ b/vistas/sobre-mi.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Informacion sobre el creador de Bakery Cordoba">
-    <meta name="Keywords" content="panaderia,bakery,coffie,meal,pan,merienda,breakfast,Informacion">
+    <meta name="Keywords" content="panaderia,bakery,coffee,meal,pan,merienda,breakfast,Informacion">
     <title>Bakery Cordoba| About me</title>
     <link rel="stylesheet" href="../estilos/main.css">
 </head>
