--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="Cafeteria dedicada a personas con pasion a la comida">
-    <meta name="Keywords" content="panaderia,bakery,coffie,meal,pan,merienda,breakfast">
+    <meta name="Description" content="Sitio web de la cafeteria dedicada a personas con pasion a la comida">
+    <meta name="Keywords" content="panaderia,bakery,coffie,meal,merienda,breakfast">
     <title>Backery Cordoba</title>
     <link rel="stylesheet" href="./estilos/main.css">
 </head>
