--- a/vistas/Contacto.html
+++ b/vistas/Contacto.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Contactate con nosotros">
-    <meta name="Keywords" content="panaderia,bakery,coffie,meal,pan,merienda,breakfast,Contacto">
+    <meta name="Keywords" content="panaderia,bakery,coffee,meal,pan,merienda,breakfast,Contacto">
     <title>Bakery Cordoba| Contact</title>
     <link rel="stylesheet" href="../estilos/main.css">
 </head>
