--- a/vistas/Galeria.html
+++ b/vistas/Galeria.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Una vista hacia todo lo que ofrece Bakery Cordoba">
-    <meta name="Keywords" content="panaderia,bakery,coffie,meal,pan,merienda,breakfast,fotos">
+    <meta name="Keywords" content="panaderia,bakery,coffee,meal,pan,merienda,breakfast,fotos">
     <title>Bakery Cordoba| Galery</title>
     <link rel="stylesheet" href="../estilos/main.css">
 </head>
