--- a/vistas/Ubicacion-de-nuestro-local.html
+++ b/vistas/Ubicacion-de-nuestro-local.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Ubicacion de la panaderia elegida por muchos Cordobeces">
-    <meta name="Keywords" content="panaderia,bakery,coffie,meal,pan,merienda,breakfast,Ubicacion,Ubication">
+    <meta name="Keywords" content="panaderia,bakery,coffee,meal,pan,merienda,breakfast,Ubicacion,Ubication">
     <title>Bakery Cordoba| Ubication</title>
     <link rel="stylesheet" href="../estilos/main.css">
 </head>
