--- a/vistas/servicios.html
+++ b/vistas/servicios.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Todo lo que ofrece Bakery Cordoba a sus clientes">
-    <meta name="Keywords" content="panaderia,bakery,coffie,meal,pan,merienda,breakfast,servicios">
+    <meta name="Keywords" content="panaderia,bakery,coffee,meal,pan,merienda,breakfast,servicios">
     <title>Bakery Cordoba| Services</title>
     <link rel="stylesheet" href="../estilos/main.css">
 </head>
