--- a/vistas/servicios.html
+++ b/vistas/servicios.html
@@ -43,9 +43,7 @@
           </nav>
     </header>
     <main class="Text">
-    <p class="Text__2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus iste perferendis quibusdam eius aut ullam harum qui eaque. Dolore corrupti ullam in voluptatibus maxime sit est non id a voluptatem.
-        Quia explicabo veniam numquam id cum eaque laudantium esse tempora reiciendis maiores vitae ipsa labore doloribus omnis ipsum rem dolor tempore debitis unde animi, amet qui officia repellendus. Recusandae, modi.
-        Corrupti non, quidem fugit vero beatae fuga, nostrum accusamus voluptas odit aperiam odio. Eos dolores, voluptatem odio dignissimos natus iusto omnis nostrum, impedit sit corrupti nihil rerum, laboriosam perspiciatis corporis.
+    <p class="Text__2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla aliquam pariatur expedita vel voluptas officiis vitae cum soluta nisi ducimus eaque, exercitationem fugiat inventore doloremque eius officia tempora consequatur similique saepe, quas, deleniti rerum? Nihil excepturi culpa sunt asperiores minima cumque facilis alias et illum, eum temporibus ut dolores officia repellat voluptatem in suscipit voluptatum. Numquam aliquid distinctio quae fugiat. Fuga mollitia atque velit sunt impedit cupiditate quaerat, earum quasi consequatur corrupti deleniti aut dolor possimus quia eligendi! Et consequatur molestiae corporis numquam est ab, rerum commodi quidem eos neque provident tenetur assumenda eum voluptates ex exercitationem soluta aspernatur similique debitis minus possimus? Impedit dolor commodi recusandae, temporibus, excepturi voluptatem odio rem quo perferendis quaerat, soluta vitae saepe adipisci. Neque.
     </p>
     </main>
     <footer>
