--- a/vistas/Galeria.html
+++ b/vistas/Galeria.html
@@ -43,10 +43,27 @@
           </nav>
     </header>
     <main class="ImgPasteleria">
-        <div class="ImgP">
-            <img src="../assets/Pasteleria1.jpg" alt="">
-            <img src="../assets/Pasteleria2.jpg" alt="">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../assets/Pasteleria1.jpg" class="d-block w-100 Img1" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../assets/Pasteleria2.jpg" class="d-block w-100 Img1" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../assets/Pasteleria3.jpg" class="d-block w-100 Img1" alt="...">
+          </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </main>
     <footer>
         <div class="Informacion">
