--- a/vistas/sobre-mi.html
+++ b/vistas/sobre-mi.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Informacion sobre el creador de Bakery Cordoba">
     <meta name="Keywords" content="panaderia,bakery,coffee,meal,pan,merienda,breakfast,Informacion">
-    <title>Bakery Cordoba| About me</title>
+    <title>Bakery Córdoba| About me</title>
     <link rel="stylesheet" href="../estilos/main.css">
 </head>
 <body class="BodyIndex">
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><h1 class="Titulo">Bakery<br>Cordoba</h1></a>
+              <a class="navbar-brand" href="../index.html"><h1 class="Titulo">Bakery<br>Córdoba</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -43,16 +43,24 @@
           </nav>
     </header>
     <main class="Text">
+      <div class="Text__Caja"> 
+        <img src="../assets/pexels-castorly-stock-3650436.jpg" alt="" class="Text__Img">
+      <div class="Text__Position"> 
         <p class="Text__1"><b>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, libero obcaecati dicta natus saepe sit in. Delectus voluptate atque et commodi tenetur, enim rem dolor voluptatem. Quia inventore vitae expedita magni minima aliquam eligendi excepturi assumenda aut ratione magnam cupiditate, doloribus quibusdam corporis veritatis odio adipisci labore similique ipsa! Eos ullam, perferendis libero cum, distinctio excepturi inventore corporis voluptatibus aliquid unde ducimus consectetur modi exercitationem nesciunt. Aliquid, nostrum tempora ratione debitis repudiandae iusto excepturi accusamus! Dolor voluptas itaque numquam accusantium quibusdam unde maiores ullam laboriosam tenetur incidunt corrupti cumque hic, similique ratione exercitationem ab neque consequatur dolorum vero minus consequuntur obcaecati quod consectetur! Provident accusantium quibusdam officia repudiandae soluta 
-        </b></p>
+        La Pastelería es un emprendimiento iniciado por Profesionales Gastronómicos. Inspirado en una Pastelería Artesanal contemporánea, que en un principio se especializó únicamente en tortas, pero hoy, cuenta con una gran variedad de Minicakes, Brownies, Alfajores, Cup Cakes, Cake Pops, Petit fours y más. Su objetivo es ofrecer un producto de alta calidad, excelente presentación, pero con el sabor de lo casero.
+      <br>El 1 de Octubre del 2015 abrimos nuestro flamente local en la ciudad de Cordoba.<br>No dejes de visitarnos, esperamos siempre sorprenderte.<br>La Pastelería.</p>
+        </b>
+      </div>
+    </div>
+     
     </main>
     <footer>
-        <div class="Informacion">
-            <a href="https://www.instagram.com/"><img class="Insta" src="../assets/instagram.png" alt=""></a>
-           <a href="https://es-la.facebook.com/"><img class="Facebook" src="../assets/facebook.png" alt=""></a>
-        </div>  
-    </footer>
+      <b> <p class="footerMenu">
+         <a href="../vistas/Contacto.html">Contact us</a> |     
+         © 2022
+       </p>
+     </b>
+     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
