--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Sitio web de la cafeteria dedicada a personas con pasion a la comida">
     <meta name="Keywords" content="panaderia,bakery,coffie,meal,merienda,breakfast">
-    <title>Backery Cordoba</title>
+    <title>Backery Córdoba</title>
     <link rel="stylesheet" href="./estilos/main.css">
 </head>
 <body class="BodyIndex">
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html"><h1 class="Titulo">Bakery<br>Cordoba</h1></a>
+              <a class="navbar-brand" href="./index.html"><h1 class="Titulo">Bakery<br>Córdoba</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -58,16 +58,18 @@
             </h2>
             <p>
                 <h3>Cafe a eleccion con una porcion de torta</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem obcaecati totam dolore ut porro provident eaque iste non perferendis molestiae!</p>
+                <p>La porcion de torta puede ser de chocolate con crema o torta de moras con pulpa de frutilla</p>
             </p>
         </section>
     </main>
+
     <footer>
-        <div class="Informacion">
-            <a href="https://www.instagram.com/" target="_blank"><img class="Insta" src="../assets/instagram.png" alt=""></a>
-           <a href="https://es-la.facebook.com/" target="_blank"><img class="Facebook" src="../assets/facebook.png" alt=""></a>
-        </div>
-    </footer>
+      <b> <p class="footerMenu">
+         <a href="../vistas/Contacto.html">Contact us</a> |     
+         © 2022
+       </p>
+     </b>
+     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 </body>
