--- a/vistas/Contacto.html
+++ b/vistas/Contacto.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Contactate con nosotros">
     <meta name="Keywords" content="panaderia,bakery,coffee,meal,pan,merienda,breakfast,Contacto">
-    <title>Bakery Cordoba| Contact</title>
+    <title>Bakery Córdoba| Contact</title>
     <link rel="stylesheet" href="../estilos/main.css">
 </head>
 <body class="BodyIndex">
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><h1 class="Titulo">Bakery<br>Cordoba</h1></a>
+              <a class="navbar-brand" href="../index.html"><h1 class="Titulo">Bakery<br>Córdoba</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -42,36 +42,51 @@
                 </div>
           </nav>
     </header>
-    <main class="Text">
-      <h1 class="Text__1">CONTACTATE</h1>
-    </main>  
-      <main class="Formulario">
-        <form action="" method="get" enctype="text/plain">
-            <label for="U<sername">Nombre</label>
-            <input type="text" name="Username" id="Username" required>
-        <div>
-            <label for="Usersurname">Apellido</label>
-            <input type="text" name="Usersurname" id="Usersurname" required>
-        </div>
-        <div>
-            <label for="Usermail">Gmail</label>
-            <input type="email" name="Usermail" id="Usermail" required>
-        </div>
-        <div>
-            <label for="Usertext"></label>
-            <textarea name="Usertext" id="Usertext" cols="30" rows="10" placeholder="Ingrese su mensaje" required></textarea>
-        </div>
-        <div>
-            <input type="submit" value="ENVIAR">
-        </div>
-        </form>
-    </main>
+    <main class="contact">
+      <h2 class="h2Contact">Contact Us</h2>
+      <hr class="hrcontact">
+      <form class="contactForm" action="" method="get" enctype="text/plain"><!--formulario completo de contacto-->
+          <div class="input-group mb-2">
+              <span class="input-group-text colorformname" id="inputGroup-sizing-default">Name</span>
+              <input type="text" class="form-control colorforminput" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+          <div class="input-group mb-2">
+            <span class="input-group-text colorformname" id="inputGroup-sizing-default">Last Name</span>
+            <input type="text" class="form-control colorforminput" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+          <div class="input-group mb-2">
+            <span class="input-group-text colorformname" id="inputGroup-sizing-default">Mail</span>
+            <input type="email" class="form-control colorforminput" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+          <div class="d-flex flex-row justify-content-between mb-2">
+            <div class="form-check">
+              <input class="form-check-input colorforminput" type="checkbox" value="0" id="flexCheckDefault">
+              <label class="form-check-label" for="flexCheckDefault">
+                Productos
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input colorforminput" type="checkbox" value="1" id="flexCheckDefault">
+              <label class="form-check-label" for="flexCheckDefault">
+                Atención
+              </label>
+          </div>
+          </div>
+          <div class="form-floating mb-2">
+            <textarea class="form-control colorforminput Tucson" id="floatingTextarea2" style="height: 370px"></textarea>
+            <label for="floatingTextarea2" class="text-dark">Your Question</label>
+          </div>
+          <button type="submit" class="btn colorformname">Submit</button>
+          <button type="reset" class="btn colorformname">Reset</button>
+      </form>
+  </main>
     <footer>
-        <div class="Informacion">
-            <a href="https://www.instagram.com/"><img class="Insta" src="../assets/instagram.png" alt=""></a>
-           <a href="https://es-la.facebook.com/"><img class="Facebook" src="../assets/facebook.png" alt=""></a>
-        </div>
-    </footer> 
+      <b> <p class="footerMenu">
+         <a href="../vistas/Contacto.html">Contact us</a> |     
+         © 2022
+       </p>
+     </b>
+     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>  
 </body>
 </html>
