--- a/vistas/Galeria.html
+++ b/vistas/Galeria.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Una vista hacia todo lo que ofrece Bakery Cordoba">
     <meta name="Keywords" content="panaderia,bakery,coffee,meal,pan,merienda,breakfast,fotos">
-    <title>Bakery Cordoba| Galery</title>
+    <title>Bakery Córdoba| Galery</title>
     <link rel="stylesheet" href="../estilos/main.css">
 </head>
 <body class="BodyIndex">
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><h1 class="Titulo">Bakery<br>Cordoba</h1></a>
+              <a class="navbar-brand" href="../index.html"><h1 class="Titulo">Bakery<br>Córdoba</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -42,35 +42,50 @@
                 </div>
           </nav>
     </header>
+    <h1 class="Text__1"><b>NUESTRO TRABAJO</b></h1>
     <main class="ImgPasteleria">
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/Pasteleria1.jpg" class="d-block w-100 Img1" alt="...">
+            <img src="../assets/Pasteleria3.jpg" class="d-block w-100 Img1" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="text-dark">Torta de chocolate y crema</h5>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="../assets/Pasteleria2.jpg" class="d-block w-100 Img1" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="text-dark">Torta de moras con pulpa de frutilla</h5>
+            </div>
           </div>
           <div class="carousel-item">
-            <img src="../assets/Pasteleria3.jpg" class="d-block w-100 Img1" alt="...">
+            <img src="../assets/Pasteleria1.jpg" class="d-block w-100 Img1" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="text-dark">Puesto de decoracion y detalles</h5>
+            </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
     </main>
     <footer>
-        <div class="Informacion">
-            <a href="https://www.instagram.com/"><img class="Insta" src="../assets/instagram.png" alt=""></a>
-           <a href="https://es-la.facebook.com/"><img class="Facebook" src="../assets/facebook.png" alt=""></a>
-        </div>
-
+     <b> <p class="footerMenu">
+        <a href="../vistas/Contacto.html">Contact us</a> |     
+        © 2022
+      </p>
+    </b>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
