--- a/vistas/Ubicacion-de-nuestro-local.html
+++ b/vistas/Ubicacion-de-nuestro-local.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Ubicacion de la panaderia elegida por muchos Cordobeces">
     <meta name="Keywords" content="panaderia,bakery,coffee,meal,pan,merienda,breakfast,Ubicacion,Ubication">
-    <title>Bakery Cordoba| Ubication</title>
+    <title>Bakery Córdoba| Ubication</title>
     <link rel="stylesheet" href="../estilos/main.css">
 </head>
 <body class="BodyIndex">
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><h1 class="Titulo">Bakery<br>Cordoba</h1></a>
+              <a class="navbar-brand" href="../index.html"><h1 class="Titulo">Bakery<br>Córdoba</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -42,17 +42,17 @@
                 </div>
           </nav>
     </header>
+    <h1 class="Text__1"><b>AQUÍ SE ENCUENTRA LA MEJOR PASTELERIA DE CÓRDOBA</b></h1>
     <main>
         <div style="width: 100%"><iframe width="100%" height="658" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=Av.%20Maip%C3%BA%20147-99,%20X5000IBC%20C%C3%B3rdoba+(Bakery%20C%C3%B3rdoba)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">GPS car tracker</a></iframe></div>
     </main>
     <footer>
-        <footer>
-            <div class="Informacion">
-                <a href="https://www.instagram.com/"><img class="Insta" src="../assets/instagram.png" alt=""></a>
-               <a href="https://es-la.facebook.com/"><img class="Facebook" src="../assets/facebook.png" alt=""></a>
-            </div>
-        </footer>
-    </footer>
+      <b> <p class="footerMenu">
+         <a href="../vistas/Contacto.html">Contact us</a> |     
+         © 2022
+       </p>
+     </b>
+     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
