--- a/vistas/servicios.html
+++ b/vistas/servicios.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Todo lo que ofrece Bakery Cordoba a sus clientes">
     <meta name="Keywords" content="panaderia,bakery,coffee,meal,pan,merienda,breakfast,servicios">
-    <title>Bakery Cordoba| Services</title>
+    <title>Bakery Córdoba| Services</title>
     <link rel="stylesheet" href="../estilos/main.css">
 </head>
 <body class="BodyIndex">
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><h1 class="Titulo">Bakery<br>Cordoba</h1></a>
+              <a class="navbar-brand" href="../index.html"><h1 class="Titulo">Bakery<br>Córdoba</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -43,15 +43,63 @@
           </nav>
     </header>
     <main class="Text">
-    <p class="Text__2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla aliquam pariatur expedita vel voluptas officiis vitae cum soluta nisi ducimus eaque, exercitationem fugiat inventore doloremque eius officia tempora consequatur similique saepe, quas, deleniti rerum? Nihil excepturi culpa sunt asperiores minima cumque facilis alias et illum, eum temporibus ut dolores officia repellat voluptatem in suscipit voluptatum. Numquam aliquid distinctio quae fugiat. Fuga mollitia atque velit sunt impedit cupiditate quaerat, earum quasi consequatur corrupti deleniti aut dolor possimus quia eligendi! Et consequatur molestiae corporis numquam est ab, rerum commodi quidem eos neque provident tenetur assumenda eum voluptates ex exercitationem soluta aspernatur similique debitis minus possimus? Impedit dolor commodi recusandae, temporibus, excepturi voluptatem odio rem quo perferendis quaerat, soluta vitae saepe adipisci. Neque.
+    <p class="Text__2"> <b> Elaboramos todos nuestros pasteles artesanales respentando rigurosamente las recetas y sabores de toda la vida, con los productos más naturales, consiguiendo un resultado único del que nos sentimos verdaderamente orgullosos.</b>
     </p>
-    </main>
-    <footer>
-        <div class="Informacion">
-            <a href="https://www.instagram.com/"><img class="Insta" src="../assets/instagram.png" alt=""></a>
-           <a href="https://es-la.facebook.com/"><img class="Facebook" src="../assets/facebook.png" alt=""></a>
+    <br>
+    <h2 class="Text__1"><b>Nuestros productos son:</b></h2>
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingOne">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            MERIENDAS
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Nuestras meriendas se basan en la infusion que usted mas le guste, acompañado de lo mas rico de la pasteleria a eleccion del consumidor</div>
         </div>
-    </footer>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            DESAYUNOS
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body"> A horas de la mañana a quien no se le ocurrio desayunar como en la realeza. Pues aqui en backery le ofrecemos el mejor cafe irlandés acompañado de nuestros mejores productos traidos directamente de la cocina.
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            ALMUERZO DEL DIA
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Tenes hambre y no sabes con que saciar tu nececidad, veni y pasate por nuestro local. Hoy en nuestro almuerzo del dia te vamos a ofrecer: 
+            <ul>
+              QUINOA CON VEGETALES SALTEADOS, BERENJENA Y HUEVO <br>
+              La quinoa te hace sentir llena, acompañarla con un huevo frito aporta proteínas y los vegetales le aportan más sabor, nutrientes y convierten a este platillo en una comida balanceada. ¡Pruébalo!
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    </main>
+    <br>	
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer>
+      <b> <p class="footerMenu">
+         <a href="../vistas/Contacto.html">Contact us</a> |     
+         © 2022
+       </p>
+     </b>
+     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
